# mapping

./: .gitignore  CMakeLists.txt  package.xml
config/: bpu.rviz  dataset_collection.rviz  dynamic_reflective_mapping.rviz  dynamic_reflective_mapping.yaml  identify.rviz  params.yaml  reflective_board_template_recorder.yaml  reflective_intensity_filter.rviz  reflective_intensity_filter.yaml  siamese_bpu_infer.yaml  target_board_template.yaml
config/rviz/: bpu.rviz  check.rviz  dynamic_reflective_mapping.rviz
docs/: candidate_extraction_design.md  dynamic_reflective_mapping_design.md  dynamic_reflective_mapping_system_plan.md  map_guided_observation_reextraction.md
docs/patent_disclosure/: 一种基于高反空间证据与真实观测重提取的移动机器人反光标识识别方法和系统_20260630123833.docx  一种基于高反空间证据与真实观测重提取的移动机器人反光标识识别方法和系统_20260630123833.md  一种用于移动机器人自动对接的反光标识结构识别方法和系统_20260630102809.docx  一种用于移动机器人自动对接的反光标识结构识别方法和系统_20260630102809.md  一种用于移动机器人自动对接的反光标识结构识别方法和系统_20260630125024.docx  一种用于移动机器人自动对接的反光标识结构识别方法和系统_20260630125024.md  交底书修订对话记录.md
include/: siamese_bpu_infer.h
include/livox_reflective_marker/: pointcloud2_codec.h  reflectivity_filter.h
launch/: dynamic_reflective_mapping.launch  reflective_board_candidate_templates.launch  reflective_board_dataset_collection.launch  reflective_board_dense_target_collection.launch  reflective_board_identifier.launch  reflective_board_identifier_pc.launch  reflective_board_template_recorder.launch  reflective_intensity_filter.launch  siamese_bpu_infer.launch
msg/: BpuScoreEntry.msg  BpuScores.msg  CandidateValidationRequest.msg  CandidateValidationResult.msg  ClusterCloud.msg  EkfStatus.msg  RecognitionCommand.msg  RecognitionScoreEntry.msg  RecognitionScores.msg  ReflectiveBoardPose.msg  ReflectiveCandidate.msg  ReflectiveCandidates.msg  ReflectiveMapSnapshot.msg  ReflectiveObservationFrame.msg  ReflectiveRecognitionRequest.msg  ReflectiveTargetState.msg  ResourceUsage.msg  TargetCommand.msg  TraditionalScoreEntry.msg  TraditionalScores.msg
scripts/: analyze_target_pose_jitter.py  auto_label_board_candidates.py  clicked_pointcloud2_reflectivity.py  compare_pcd_maps.py  evaluate_traditional_yaml.py  filter_pcd_by_intensity.py  make_colored_pcd_overlay.py  pointcloud2_intensity_filter.py  relabel_auto_board_candidate.py
src/: dynamic_reflective_mapping_node.cpp  reflective_board_dataset_collector_node.cpp  reflective_board_identifier_node.cpp  reflective_board_pose_estimator_node.cpp  reflective_board_template_recorder_node.cpp  reflective_board_yaml_traditional_eval.cpp  reflective_bpu_scorer_node.cpp  reflective_candidate_extractor_node.cpp  reflective_intensity_filter_node.cpp  reflective_map_decision_node.cpp  reflective_observation_bpu_scorer_node.cpp  resource_monitor_node.cpp  siamese_bpu_infer_node.cpp  target_manager_node.cpp  traditional_validator_node.cpp
