<?xml version="1.0"?>
<package format="2">
  <name>livox_reflective_marker</name>
  <version>0.1.0</version>
  <description>
    Identify a target reflective board from a Livox MID360S point cloud using
    a recorded board template. Also includes a template recorder and a resource
    monitor node for profiling CPU/memory usage.
  </description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>livox_ros_driver2</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
